[package]
name = "simple_blockchain_parser"
version = "0.1.0"
authors = ["Ayrat Kaspranov (tramulns) <user@tramulns.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
error-chain = "0.12.4"
phf = { version = "0.8.0", features = ["macros"] }
chrono = "0.4.19"
